@@ -6,8 +6,8 @@
   Constructing a truthTable from fuzzy set score.
 }
 \usage{
-fs_truthTable(mydata, outcome, conditions, ncases_cutoff = 1,
-             consistency_cutoff = 0.8, show.cases =TRUE,quiet =FALSE,
+fs_truthTable(mydata, outcome, conditions, ncases_cutoff = 1,consistency_cutoff = 0.8,
+              prop_cutoff=1, show.cases =TRUE,quiet =FALSE,
              cases = NULL, complete=FALSE,...)
 
 \method{sort}{fs_truthTable}(x, decreasing = TRUE, criterion = "Consistency", ...)
@@ -21,7 +21,8 @@ fs_truthTable(mydata, outcome, conditions, ncases_cutoff = 1,
     be regarded as dontcare configuration.}
   \item{consistency_cutoff}{Cutoff point of consistenty score, cases with
     consistency score greater than cutoff point are regarded as OUT=1. }
-  % \item{complete}{prints the complete truth table, including configurations without empirical cases.}
+  \item{prop_cutoff}{proportion of consistent/inconsistent cases.}
+  \item{complete}{prints the complete truth table, including configurations without empirical cases.}
   \item{show.cases}{show the rownames from the original dataset for each
     combination of conditions.}
   \item{quiet}{Not used currently.}
@@ -61,6 +62,8 @@ fs_truthTable(mydata, outcome, conditions, ncases_cutoff = 1,
   comparative analysis (QCA) and related techniques. ed by Benoit
   RiHoux and Charles Ragin. Sage. This chapter can be downloaded from
   \url{http://www.u.arizona.edu/~cragin/fsQCA/software.shtml}.
+
+  Rubinson, C. (2013), 'Contradictions in fsQCA', Qual Quant 47(5), 2847-2867.
 }
 \author{Ronggui HUANG}
 \seealso{\code{\link{reduce}}, \code{\link{cs_truthTable}} and  \code{\link{fs_truthTable}}}
